claims/claims-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claims
spec:
  replicas: 1
  selector:
    matchLabels:
      app: claims
  template:
    metadata:
      labels:
        app: claims
    spec:
      containers:
      - name: claims
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        resources:
          limits:
            memory: "250Mi"
            cpu: "250m"
          requests:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: claims  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: claims
