claims/claims-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claims-ingress
spec:
  rules:
  - host: claims.inside.direct
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: claims
            port:
              number: 80
  ingressClassName: nginx
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: claims-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /cc(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: claims
#             port:
#               number: 80
#       - path: /(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: claims
#             port:
#               number: 80
